feat: create header

--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap" rel="stylesheet">
   <title>RocketJR</title>
 </head>
 <body>
-  <h1>Bem-vindo ao Projeto!</h1>
+
+<header>
+  <a href="#"><img src="./assets/logo.svg" alt=""></a>
+
+  <nav>
+  <ul><li><a href="#">Início</a></li></ul>
+  <ul><li><a href="#">Quem Somos?</a></li></ul>
+  <ul><li><a href="#">Serviços</a></li></ul>
+  <ul><li><a href="#">Contato</a></li></ul>
+  </nav>
+
+  <a href='https://drive.google.com/file/d/1d11fD7wzm5EA1HiZG8wCbjd4VMWHgCNJ/view?fbclid=PAZXh0bgNhZW0CMTEAAaYAETWhDUVvAaFg4RZZlRMEyB6BoQPoybrNpbkmMJBl0iCD0Rdzer-tpeY_aem_GoC2XVxk_z-AHFyh76fgHw' target="_blank"><button class="btn">PS Rocket Jr</button></a>
+
+</header>
+<hr>
 </body>
 </html>
