--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap" rel="stylesheet">
@@ -32,7 +32,7 @@
 
 <Banner>
   <div class="banner">
-    <a href="banner-img"> <img src="./assets/bannerimg.svg" alt="Not Found Img"></a> 
+ <img src="./assets/bannerImg.svg" alt="Not Found Img"></a> 
     
     <div class="banner-text">
       <h1 class="maquina-escrever">Seja bem-vindo a Rocket Jr</h1>
@@ -68,37 +68,47 @@
       </div>
   
       <div class="card swiper-slide">
-        <img src="./assets/chip.svg" alt="">
+        <img src="./assets/users.svg" alt="">
         <h1>Consultoria em tecnologia<br>e inovação</h1>
         <p>Transformamos ideias em soluções digitais inovadoras, unindo criatividade e tecnologia para entregar resultados que impulsionam o seu negócio.</p>
       </div>
   
       <div class="card swiper-slide">
-        <img src="./assets/chip.svg" alt="">
+        <img src="./assets/Trending.svg" alt="">
         <h1>E-commerce</h1>
         <p>Transformamos ideias em soluções digitais inovadoras, unindo criatividade e tecnologia para entregar resultados que impulsionam o seu negócio.</p>
       </div>
   
       <div class="card swiper-slide">
-        <img src="./assets/chip.svg" alt="">
+        <img src="./assets/estrela.svg" alt="">
         <h1>Transformação digital</h1>
         <p>Transformamos ideias em soluções digitais inovadoras, unindo criatividade e tecnologia para entregar resultados que impulsionam o seu negócio.</p>
       </div>
   
       <div class="card swiper-slide">
-        <img src="./assets/chip.svg" alt="">
+        <img src="./assets/Data.svg" alt="">
         <h1>Análise de dados</h1>
         <p>Transformamos ideias em soluções digitais inovadoras, unindo criatividade e tecnologia para entregar resultados que impulsionam o seu negócio.</p>
       </div>
     </div>
   
     <!-- Paginação e navegação -->
-    <div class="swiper-pagination"></div>
+
     <div class="swiper-button-prev"></div>
     <div class="swiper-button-next"></div>
   </div>
   
 
+</section>
+
+<section>
+  <h1>teste</h1>
+  <h1>teste</h1>
+  <h1>teste</h1>
+  <h1>teste</h1>
+  <h1>teste</h1>
+  <h1>teste</h1>
+  
 </section>
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
