--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <Banner>
     <div class="banner">
 
-      <img src="./assets/banner.svg" alt="Fotos dos membros da equipe!"></a>
+      <img src="./assets/banner.svg" alt="Fotos dos membros da equipe!">
 
 
       <div class="banner-text">
