fix: correção de bugs da main

--- a/index.html
+++ b/index.html
@@ -64,29 +64,34 @@
         target="_blank"><button class="btn">PS Rocket Jr</button></a>
   </header>
 
-  <hr />
+  <hr>
 
   <Banner>
     <div class="banner">
 
-      <img src="./assets/banner.svg" alt="Fotos dos membros da equipe!">
+      <img src="./assets/teste 2.svg" alt="Fotos dos membros da equipe!">
 
 
       <div class="banner-text">
-        <h1 class="maquina-escrever">Seja bem-vindo a Rocket Jr</h1>
+        <h1 class="maquina-escrever">
+          Chegou a hora
+          da inovação
+      </h1>
+
         <p>A Rocket jr está no mercado com o proposito de inovar empresas com o desenvolvimento de tecnologias, deixe a
           rocket te ajuda a direcionar seu negócio.</p>
       </div>
-
-      <div class="banner-card">
-        <h3>Atual Quantidade de Membros</h3>
-        <h2>
-          <p>13</p>
-        </h2>
-      </div>
-
     </div>
 
+    <article class="down-line">
+      <img src="./assets/icon.svg" alt="" >
+      <p>Melhor valor do mercado<br>
+        Com orçamento gratuito!</p>
+      <img src="./assets/codesandbox.svg" alt="">
+      <p>Metodologia Ágeis</p>
+      <img src="./assets/User-check.svg" alt="">
+      <p>Equipe qualificada</p>
+  </article>
   </Banner>
 
 
@@ -146,10 +151,6 @@
 
   </section>
 
-  <section>
-
-
-  </section>
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
