--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Cutive&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
 
+
+
     <title>RocketJR</title>
   </head>
   
@@ -49,36 +51,25 @@
       <a href="https://drive.google.com/file/d/1d11fD7wzm5EA1HiZG8wCbjd4VMWHgCNJ/view?fbclid=PAZXh0bgNhZW0CMTEAAaYAETWhDUVvAaFg4RZZlRMEyB6BoQPoybrNpbkmMJBl0iCD0Rdzer-tpeY_aem_GoC2XVxk_z-AHFyh76fgHw"
         target="_blank"><button class="btn">PS Rocket Jr</button></a>
   </header>
-
   <hr>
 
-  <Banner>
-    <div class="banner">
-
-      <img src="./assets/teste 2.svg" alt="Fotos dos membros da equipe!">
-
-
-      <div class="banner-text">
-        <h1 class="maquina-escrever">
-          Chegou a hora
-          da inovação
-      </h1>
-
-        <p>A Rocket jr está no mercado com o proposito de inovar empresas com o desenvolvimento de tecnologias, deixe a
-          rocket te ajuda a direcionar seu negócio.</p>
-      </div>
+  <section class="rocket-section">
+    <div class="text-content">
+        <h1 id="typed-text"></h1>
+        <p>A Rocket Jr está no mercado com o propósito de inovar empresas com o desenvolvimento de tecnologias. Deixe a Rocket te ajudar a direcionar seu negócio.</p>
     </div>
+</section>
 
-    <article class="down-line">
-      <img src="./assets/icon.svg" alt="" >
-      <p>Melhor valor do mercado<br>
-        Com orçamento gratuito!</p>
-      <img src="./assets/codesandbox.svg" alt="">
-      <p>Metodologia Ágeis</p>
-      <img src="./assets/User-check.svg" alt="">
-      <p>Equipe qualificada</p>
-  </article>
-  </Banner>
+
+  <article class="down-line">
+    <img src="./assets/icon.svg" alt="" >
+    <p>Melhor valor do mercado<br>
+      Com orçamento gratuito!</p>
+    <img src="./assets/codesandbox.svg" alt="">
+    <p>Metodologia Ágeis</p>
+    <img src="./assets/User-check.svg" alt="">
+    <p>Equipe qualificada</p>
+</article>
 
 
   <section class="servicos">
@@ -139,6 +130,7 @@
 
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
   <script src="./js/script.js"></script>
 
