fix: Correções do banner

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <li><a href="#">Quem Somos?</a></li>
         </ul>
         <ul>
-          <li><a href="#">Serviços</a></li>
+          <li><a href="#services">Serviços</a></li>
         </ul>
         <ul>
           <li><a href="#">Contato</a></li>
@@ -75,7 +75,7 @@
 </article>
 
 
-  <section class="servicos">
+  <section class="servicos" id="services">
     <div class="grid-text">
       <h1>Serviços</h1>
     </div>
@@ -87,38 +87,33 @@
     <div class="container swiper">
       <div class="swiper-wrapper">
         <div class="card swiper-slide">
-          <img src="./assets/chip.svg" alt="">
-          <h1>Ideação e desenvolvimento <br> de soluções digitais</h1>
-          <p>Transformamos ideias em soluções digitais inovadoras, unindo criatividade e tecnologia para entregar
-            resultados que impulsionam o seu negócio.</p>
+          <img src="./assets/Landing page.svg" alt="">
+          <h1>Landing Page</h1>
+          <p>Desenvolvemos páginas web estratégicas para atrair visitantes e convertê-los em clientes ou leads, aumentando o alcance do seu negócio.</p>
         </div>
 
         <div class="card swiper-slide">
-          <img src="./assets/users.svg" alt="">
-          <h1>Consultoria em tecnologia<br>e inovação</h1>
-          <p>Transformamos ideias em soluções digitais inovadoras, unindo criatividade e tecnologia para entregar
-            resultados que impulsionam o seu negócio.</p>
+          <img src="./assets/TI.svg" alt="">
+          <h1>Consultoria em TI</h1>
+          <p>Analisamos o setor de Tecnologia da Informação da sua empresa, identificamos oportunidades de melhoria e sugerimos soluções eficientes para otimizar a gestão e os processos.</p>
         </div>
 
         <div class="card swiper-slide">
-          <img src="./assets/Trending.svg" alt="">
-          <h1>E-commerce</h1>
-          <p>Transformamos ideias em soluções digitais inovadoras, unindo criatividade e tecnologia para entregar
-            resultados que impulsionam o seu negócio.</p>
+          <img src="./assets/portifolio.svg" alt="">
+          <h1>Portfólio Digital</h1>
+          <p>Criamos portfólios personalizados para profissionais e empresas, reunindo seus melhores projetos e experiências para destacar sua marca no mercado.</p>
         </div>
 
         <div class="card swiper-slide">
-          <img src="./assets/estrela.svg" alt="">
-          <h1>Transformação digital</h1>
-          <p>Transformamos ideias em soluções digitais inovadoras, unindo criatividade e tecnologia para entregar
-            resultados que impulsionam o seu negócio.</p>
+          <img src="./assets/sitee.svg" alt="">
+          <h1>Desenvolvimento de Site</h1>
+          <p>Desenvolvemos sites personalizados, desde páginas institucionais até plataformas web mais complexas, garantindo uma experiência intuitiva, responsiva e eficiente</p>
         </div>
 
         <div class="card swiper-slide">
-          <img src="./assets/Data.svg" alt="">
-          <h1>Análise de dados</h1>
-          <p>Transformamos ideias em soluções digitais inovadoras, unindo criatividade e tecnologia para entregar
-            resultados que impulsionam o seu negócio.</p>
+          <img src="./assets/software.svg" alt="">
+          <h1>Desenvolvimento de Sistemas</h1>
+          <p>Criamos soluções tecnológicas sob medida, desenvolvendo sistemas que automatizam processos e otimizam a gestão da sua empresa.</p>
         </div>
       </div>
 
