feat: finalizei as demais sections do site, porém ainda falta melhorar css do sessão de quem somos e também a responsividade do site

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
-      
+
       <title>RocketJR</title>
     </head>
 
@@ -43,7 +43,7 @@
 
     <title>RocketJR</title>
   </head>
-  
+
 <body>
   <header>
     <a href="#"><img src="./assets/logo.svg" alt="" /></a>
@@ -136,11 +136,7 @@
       <div class="swiper-button-prev"></div>
       <div class="swiper-button-next"></div>
     </div>
-
-
   </section>
-
-
 
   <section class="quem-somos">
       <div class="title-text">
@@ -153,23 +149,138 @@
       </p>
       </div>
 
-
   <div class="galeria">
     <img src="./assets/Frame 2.svg">
     <img class="image1"    src="./assets/jay.svg">
     <img  class="image2" src="./assets/elysa.svg">
   </div>
- 
- 
-  <div class="container-retangulo">
-    <div class="retangulo">
+
+    <div class="container-retangulo">
+      <div class="retangulo">
         <p><b>Empresa Júnior</b> do curso bacharelado em <br>
         <b>Sistemas de Informação</b></p>
+      </div>
     </div>
-</div>
-
   </section>
 
+  <section class="perguntas-frequentes">
+    <h2>Perguntas frequentes</h2>
+    <div class="content-box">
+      <div class="content-left">
+        <img class="content-left-img" src="./assets/logo.svg" />
+        <p>
+          Veja as perguntas que recebemos frequentemente sobre nossa empresa júnior e nossos serviços. Neste espaço, estamos respondendo apenas algumas delas. Caso tenha alguma dúvida específica sobre nossos serviços, entre em contato com nossa equipe agora mesmo!
+        </p>
+        <button class="btn-contact">Contato</button>
+      </div>
+
+      <div class="content-right">
+        <div class="box-ask">
+            <div class="box-header">
+                <span>001</span>
+                <h3>O Que É Uma Landing Page?</h3>
+                <div class="icon"></div>
+            </div>
+            <div class="box-content">
+                <p>Uma Landing Page é uma página web específica criada para converter visitantes em leads ou clientes. É otimizada para uma única ação ou objetivo, como cadastro em newsletter, download de material ou compra de produto.</p>
+            </div>
+        </div>
+
+        <div class="box-ask">
+            <div class="box-header">
+                <span>002</span>
+                <h3>O Que É Um Portfólio?</h3>
+                <div class="icon"></div>
+            </div>
+            <div class="box-content">
+                <p>Um Portfólio é uma coleção organizada de trabalhos, projetos e realizações que demonstram suas habilidades, experiência e expertise em determinada área. É uma vitrine profissional digital.</p>
+            </div>
+        </div>
+
+        <div class="box-ask">
+            <div class="box-header">
+                <span>003</span>
+                <h3>Qual A Diferença Entre Landing Page E Portfólio?</h3>
+                <div class="icon"></div>
+            </div>
+            <div class="box-content">
+                <p>Enquanto uma Landing Page é focada em converter visitantes para uma ação específica, um Portfólio serve para mostrar seu trabalho e experiência. Landing Pages são orientadas à conversão, Portfólios à apresentação.</p>
+            </div>
+        </div>
+
+        <div class="box-ask">
+            <div class="box-header">
+                <span>004</span>
+                <h3>O Que É Consultoria Em TI?</h3>
+                <div class="icon"></div>
+            </div>
+            <div class="box-content">
+                <p>Consultoria em TI é um serviço especializado que auxilia empresas a otimizar seus processos tecnológicos, implementar soluções digitais e melhorar sua infraestrutura de tecnologia da informação.</p>
+            </div>
+        </div>
+
+        <div class="box-ask">
+            <div class="box-header">
+                <span>005</span>
+                <h3>Por que minha empresa precisa de um site institucional?</h3>
+                <div class="icon"></div>
+            </div>
+            <div class="box-content">
+                <p>Um site institucional estabelece presença digital profissional, aumenta credibilidade, facilita o contato com clientes e serve como canal de informação 24/7 sobre seus produtos e serviços.</p>
+            </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="timeline-section">
+    <h2 class="timeline-title">Nossa Trajetória</h2>
+
+    <div class="timeline-container">
+        <div class="timeline-item">
+            <div class="timeline-content">
+              <h3 class="timeline-heading">Aplicação Do Formulário PNDL 2024</h3>
+              <div class="timeline-date">Out - Nov 2024</div>
+            </div>
+            <div class="timeline-dot red"></div>
+            <div class="timeline-content">
+              <h3 class="timeline-heading">Pesquisa e ligações para as escolas do brasil</h3>
+              <p class="timeline-description">Pesquisa e ligações para as escolas do brasil Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing Elit, Sed Do Eiusmod Tempor.</p>
+          </div>
+        </div>
+
+        <div class="timeline-item">
+            <div class="timeline-content">
+              <h3 class="timeline-heading">SisWeeek 2024</h3>
+              <div class="timeline-date">Out - Nov 2024</div>
+            </div>
+            <div class="timeline-dot black"></div>
+            <div class="timeline-content">
+              <h3 class="timeline-heading">Desenvolvimento da aplicação web</h3>
+              <p class="timeline-description">Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing Elit, Sed Do Eiusmod Tempor.</p>
+          </div>
+        </div>
+    </div>
+</section>
+
+<footer class="footer">
+  <div class="footer-container">
+      <div class="logo-section">
+          <img src="assets/logo-rocket-nameWhite.svg" alt="Rocket Junior" class="rocket-logo">
+      </div>
+
+      <div class="partner-logos">
+          <img src="assets/LOGO FEJEA.svg" alt="FEJEA" class="partner-logo">
+          <img src="assets/brasil-junior.svg" alt="Brasil Junior" class="partner-logo">
+      </div>
+  </div>
+
+  <div class="footer-links">
+    <a href="/privacy" class="footer-link">Privacy Policy</a>
+    <span class="footer-link">2025 Rocket Jr All Rights Reserved.</span>
+    <a href="/terms" class="footer-link">Terms Of Service</a>
+  </div>
+</footer>
 
   <script src="./js/script.js"></script>
 
