fix: centralização de componentes

--- a/index.html
+++ b/index.html
@@ -183,56 +183,58 @@
 
     <section class="w-screen bg-red-800">
       <h2 class="text-5xl text-center py-6 text-white font-bold">
-        Quem Somos?
+      Quem Somos?
       </h2>
 
       <p class="w-4/5 mx-auto text-white text-justify mb-4">
-        A Rocket Júnior (RJR) é a Empresa Júnior do curso de Sistemas de
-        Informação do Campus Arapiraca – Unidade Educacional Penedo. Somos um
-        time de estudantes apaixonados por tecnologia e inovação, que aplicam na
-        prática os conhecimentos adquiridos em sala de aula para desenvolver
-        soluções digitais para o mercado. Nosso principal objetivo é
-        proporcionar aos nossos membros uma experiência empresarial real,
-        preparando-os para os desafios do mercado de trabalho e impulsionandow-9/10 
-        suas carreiras!
+      A Rocket Júnior (RJR) é a Empresa Júnior do curso de Sistemas de
+      Informação do Campus Arapiraca – Unidade Educacional Penedo. Somos um
+      time de estudantes apaixonados por tecnologia e inovação, que aplicam na
+      prática os conhecimentos adquiridos em sala de aula para desenvolver
+      soluções digitais para o mercado. Nosso principal objetivo é
+      proporcionar aos nossos membros uma experiência empresarial real,
+      preparando-os para os desafios do mercado de trabalho e impulsionando 
+      suas carreiras!
       </p>
 
-      <div class="w-screen flex items-center justify-center p-2 gap-2">
-        <img class="w-1/2 py-2" src="./assets/Frame_2.svg" />
-        <div class="flex flex-col w-1/2 gap-2">
-          <img class="" src="./assets/jay.svg" />
-          <img class="" src="./assets/elysa.svg" />
-        </div>
+      <div class="w-screen flex items-center justify-center p-2 gap-2 -mt-2">
+      <img class="w-1/2 py-2" src="./assets/Frame_2.svg" />
+      <div class="flex flex-col w-1/2 gap-2">
+        <img class="" src="./assets/jay.svg" />
+        <img class="" src="./assets/elysa.svg" />
+      </div>
       </div>
 
-      <div class="bg-white m-2">
-        <div class="retangulo">
-          <p>
-            <b>Empresa Júnior</b> do curso bacharelado em <br />
-            <b>Sistemas de Informação</b>
+      <div class="retangulo bg-[#7F0000] m-2 w-4.5/5 -mt2">
+        <p class="text-white text-justify text-xl">
+          <b>Empresa Júnior</b> do curso bacharelado em 
+          <b>Sistemas de Informação</b>
           </p>
-        </div>
       </div>
     </section>
 
     <section class="perguntas-frequentes">
-      <h2>Perguntas frequentes</h2>
+      <h2 class="text-5xl text-center py-6 font-bold bg-gradient-to-r from-[#7B0000] to-[#DB0303] 
+      text-transparent bg-clip-text">Perguntas frequentes</h2>
       <div class="content-box">
         <div class="content-left">
-          <img class="content-left-img" src="./assets/logo.svg" />
-          <p>
+            <img class="content-left-img hidden md:flex mx-auto" src="./assets/logo.svg" />
+          <p class="w-4/5 mx-auto text-justify mb-4 text-[#5B5959]">
             Veja as perguntas que recebemos frequentemente sobre nossa empresa
             júnior e nossos serviços. Neste espaço, estamos respondendo apenas
             algumas delas. Caso tenha alguma dúvida específica sobre nossos
             serviços, entre em contato com nossa equipe agora mesmo!
           </p>
-          <button class="btn-contact">Contato</button>
-        </div>
+            <button class="btn-contact rounded-full border-none 
+            bg-gradient-to-r from-[#520101] to-[#F60707] text-white font-bold 
+            cursor-pointer w-40 h-15 mt-8 mx-auto block">
+            Contato
+          </button>
 
-        <div class="content-right">
-          <div class="box-ask">
-            <div class="box-header">
-              <span>001</span>
+        <div class="content-right mt-8">
+          <div class="box-ask bg-[#F0F0F0] w-4/5 mx-auto">
+            <div class="box-header text-center ">
+              <span class="font-bold">001</span>
               <h3>O Que É Uma Landing Page?</h3>
               <div class="icon"></div>
             </div>
@@ -246,9 +248,9 @@
             </div>
           </div>
 
-          <div class="box-ask">
-            <div class="box-header">
-              <span>002</span>
+          <div class="box-ask bg-[#F0F0F0] mt-4 w-4/5 mx-auto">
+            <div class="box-header text-center ">
+              <span class="font-bold">002</span>
               <h3>O Que É Um Portfólio?</h3>
               <div class="icon"></div>
             </div>
@@ -262,9 +264,9 @@
             </div>
           </div>
 
-          <div class="box-ask">
-            <div class="box-header">
-              <span>003</span>
+          <div class="box-ask bg-[#F0F0F0] mt-4 w-4/5 mx-auto">
+            <div class="box-header text-center ">
+              <span class="font-bold">003</span>
               <h3>Qual A Diferença Entre Landing Page E Portfólio?</h3>
               <div class="icon"></div>
             </div>
@@ -278,9 +280,9 @@
             </div>
           </div>
 
-          <div class="box-ask">
-            <div class="box-header">
-              <span>004</span>
+          <div class="box-ask bg-[#F0F0F0] mt-4 w-4/5 mx-auto">
+            <div class="box-header text-center ">
+              <span class="font-bold">004</span>
               <h3>O Que É Consultoria Em TI?</h3>
               <div class="icon"></div>
             </div>
@@ -294,25 +296,25 @@
             </div>
           </div>
 
-          <div class="box-ask">
-            <div class="box-header">
-              <span>005</span>
+            <div class="box-ask bg-[#F0F0F0] mt-4 w-4/5 mx-auto">
+            <div class="box-header text-center ">
+              <span class="font-bold">005</span>
               <h3>Por que minha empresa precisa de um site institucional?</h3>
               <div class="icon"></div>
             </div>
             <div class="box-content">
               <p>
-                Um site institucional estabelece presença digital profissional,
-                aumenta credibilidade, facilita o contato com clientes e serve
-                como canal de informação 24/7 sobre seus produtos e serviços.
+              Um site institucional estabelece presença digital profissional,
+              aumenta credibilidade, facilita o contato com clientes e serve
+              como canal de informação 24/7 sobre seus produtos e serviços.
               </p>
             </div>
-          </div>
+            </div>
         </div>
       </div>
     </section>
 
-    <section class="timeline-section">
+    <section class="timeline-section mt-8">
       <h2 class="timeline-title">Nossa Trajetória</h2>
 
       <div class="timeline-container">
@@ -350,7 +352,7 @@
       </div>
     </section>
 
-    <footer class="footer">
+    <footer class="footer mt-8">
       <div class="footer-container">
         <div class="logo-section">
           <img
@@ -360,17 +362,17 @@
           />
         </div>
 
-        <div class="partner-logos">
+        <div class="partner-logos mt-8">
           <img src="assets/LOGO FEJEA.svg" alt="FEJEA" class="partner-logo" />
           <img
             src="assets/brasil-junior.svg"
             alt="Brasil Junior"
-            class="partner-logo"
+            class="partner-logo mt-4"
           />
         </div>
       </div>
 
-      <div class="footer-links">
+      <div class="footer-links mt-8">
         <a href="/privacy" class="footer-link">Privacy Policy</a>
         <span class="footer-link">2025 Rocket Jr All Rights Reserved.</span>
         <a href="/terms" class="footer-link">Terms Of Service</a>
