--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
       </div>
 
       <div class="retangulo bg-[#7F0000] m-2 w-4.5/5 -mt2">
-        <p class="text-white text-justify text-xl">
+        <p class="text-white text-justify text-base">
           <b>Empresa Júnior</b> do curso bacharelado em 
           <b>Sistemas de Informação</b>
           </p>
@@ -315,9 +315,10 @@
     </section>
 
     <section class="timeline-section mt-8">
-      <h2 class="timeline-title">Nossa Trajetória</h2>
+      <h2 class="timeline-title text-xl text-center py-6 font-bold bg-gradient-to-r from-[#7B0000] to-[#DB0303] 
+      text-transparent bg-clip-text">Nossa Trajetória</h2>
 
-      <div class="timeline-container">
+      <div class="timeline-container w-screen flex items-center justify-center p-2 gap-2 -mt-2">
         <div class="timeline-item">
           <div class="timeline-content">
             <h3 class="timeline-heading">Aplicação Do Formulário PNDL 2024</h3>
@@ -352,9 +353,9 @@
       </div>
     </section>
 
-    <footer class="footer mt-8">
-      <div class="footer-container">
-        <div class="logo-section">
+    <footer class="footer mt-8 bg-black">
+      <div class="footer-container w-screen flex items-center p-2 gap-2">
+        <div class="logo-section w-1/3 ml-5">
           <img
             src="assets/logo-rocket-nameWhite.svg"
             alt="Rocket Junior"
@@ -362,7 +363,7 @@
           />
         </div>
 
-        <div class="partner-logos mt-8">
+        <div class="partner-logos gap-2 flex flex-row w-1/5 ml-15">
           <img src="assets/LOGO FEJEA.svg" alt="FEJEA" class="partner-logo" />
           <img
             src="assets/brasil-junior.svg"
@@ -372,7 +373,7 @@
         </div>
       </div>
 
-      <div class="footer-links mt-8">
+      <div class="footer-links bg-black mt-8">
         <a href="/privacy" class="footer-link">Privacy Policy</a>
         <span class="footer-link">2025 Rocket Jr All Rights Reserved.</span>
         <a href="/terms" class="footer-link">Terms Of Service</a>
