--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       </div>
     </section>
 
-    <section class="w-screen bg-red-800">
+    <section class="w-screen mb-4 bg-red-800 ">
       <h2 class="text-5xl text-center py-6 text-white font-bold">
       Quem Somos?
       </h2>
@@ -205,8 +205,8 @@
       </div>
       </div>
 
-      <div class="retangulo bg-[#7F0000] m-2 w-4.5/5 -mt2">
-        <p class="text-white text-justify text-base">
+      <div class="retangulo bg-[#7F0000] rounded-2xl m-2 w-4.5/5 -mt2 ml-6">
+        <p class="text-white text-left text-base ml-5 mr-5">
           <b>Empresa Júnior</b> do curso bacharelado em 
           <b>Sistemas de Informação</b>
           </p>
@@ -232,14 +232,14 @@
           </button>
 
         <div class="content-right mt-8">
-          <div class="box-ask bg-[#F0F0F0] w-4/5 mx-auto">
+          <div class="box-ask bg-[#F0F0F0] w-4/5 rounded-2xl mx-auto">
             <div class="box-header text-center ">
               <span class="font-bold">001</span>
-              <h3>O Que É Uma Landing Page?</h3>
+              <h3 class="font-bold">O Que É Uma Landing Page?</h3>
               <div class="icon"></div>
             </div>
             <div class="box-content">
-              <p>
+              <p class="text-justify text-[#343434] ml-5 mr-5">
                 Uma Landing Page é uma página web específica criada para
                 converter visitantes em leads ou clientes. É otimizada para uma
                 única ação ou objetivo, como cadastro em newsletter, download de
@@ -248,14 +248,14 @@
             </div>
           </div>
 
-          <div class="box-ask bg-[#F0F0F0] mt-4 w-4/5 mx-auto">
+          <div class="box-ask bg-[#F0F0F0] mt-4 w-4/5 rounded-2xl mx-auto">
             <div class="box-header text-center ">
               <span class="font-bold">002</span>
-              <h3>O Que É Um Portfólio?</h3>
+              <h3 class="font-bold">O Que É Um Portfólio?</h3>
               <div class="icon"></div>
             </div>
             <div class="box-content">
-              <p>
+              <p class="text-justify text-[#343434] ml-5 mr-5">
                 Um Portfólio é uma coleção organizada de trabalhos, projetos e
                 realizações que demonstram suas habilidades, experiência e
                 expertise em determinada área. É uma vitrine profissional
@@ -264,14 +264,14 @@
             </div>
           </div>
 
-          <div class="box-ask bg-[#F0F0F0] mt-4 w-4/5 mx-auto">
+          <div class="box-ask bg-[#F0F0F0] mt-4 w-4/5 rounded-2xl mx-auto">
             <div class="box-header text-center ">
               <span class="font-bold">003</span>
-              <h3>Qual A Diferença Entre Landing Page E Portfólio?</h3>
+              <h3 class="font-bold">Qual A Diferença Entre Landing Page E Portfólio?</h3>
               <div class="icon"></div>
             </div>
             <div class="box-content">
-              <p>
+              <p class="text-justify text-[#343434] ml-5 mr-5">
                 Enquanto uma Landing Page é focada em converter visitantes para
                 uma ação específica, um Portfólio serve para mostrar seu
                 trabalho e experiência. Landing Pages são orientadas à
@@ -280,14 +280,14 @@
             </div>
           </div>
 
-          <div class="box-ask bg-[#F0F0F0] mt-4 w-4/5 mx-auto">
+          <div class="box-ask bg-[#F0F0F0] mt-4 w-4/5 rounded-2xl mx-auto">
             <div class="box-header text-center ">
               <span class="font-bold">004</span>
-              <h3>O Que É Consultoria Em TI?</h3>
+              <h3 class="font-bold">O Que É Consultoria Em TI?</h3>
               <div class="icon"></div>
             </div>
             <div class="box-content">
-              <p>
+              <p class="text-justify text-[#343434] ml-5 mr-5">
                 Consultoria em TI é um serviço especializado que auxilia
                 empresas a otimizar seus processos tecnológicos, implementar
                 soluções digitais e melhorar sua infraestrutura de tecnologia da
@@ -296,14 +296,14 @@
             </div>
           </div>
 
-            <div class="box-ask bg-[#F0F0F0] mt-4 w-4/5 mx-auto">
+            <div class="box-ask bg-[#F0F0F0] mt-4 w-4/5 rounded-2xl mx-auto">
             <div class="box-header text-center ">
               <span class="font-bold">005</span>
-              <h3>Por que minha empresa precisa de um site institucional?</h3>
+              <h3 class="font-bold text-center">Por que minha empresa precisa de um site institucional?</h3>
               <div class="icon"></div>
             </div>
             <div class="box-content">
-              <p>
+              <p class="text-justify text-[#343434] ml-5 mr-5">
               Um site institucional estabelece presença digital profissional,
               aumenta credibilidade, facilita o contato com clientes e serve
               como canal de informação 24/7 sobre seus produtos e serviços.
@@ -353,9 +353,9 @@
       </div>
     </section>
 
-    <footer class="footer mt-8 bg-black">
+    <footer class="footer bg-black">
       <div class="footer-container w-screen flex items-center p-2 gap-2">
-        <div class="logo-section w-1/3 ml-5">
+        <div class="logo-section mt-6 w-1/3 ml-2">
           <img
             src="assets/logo-rocket-nameWhite.svg"
             alt="Rocket Junior"
@@ -363,7 +363,7 @@
           />
         </div>
 
-        <div class="partner-logos gap-2 flex flex-row w-1/5 ml-15">
+        <div class="partner-logos mt-5 gap-2 flex flex-row w-1/5 ml-15">
           <img src="assets/LOGO FEJEA.svg" alt="FEJEA" class="partner-logo" />
           <img
             src="assets/brasil-junior.svg"
@@ -373,10 +373,10 @@
         </div>
       </div>
 
-      <div class="footer-links bg-black mt-8">
-        <a href="/privacy" class="footer-link">Privacy Policy</a>
-        <span class="footer-link">2025 Rocket Jr All Rights Reserved.</span>
-        <a href="/terms" class="footer-link">Terms Of Service</a>
+      <div class="footer-links max-w-screen mb-4 text-center text-[12px] text-bold">
+        <a href="/privacy" class="footer-link text-white pr-5">Privacy Policy</a>
+        <a href="/terms" class="footer-link text-white pr-5">Terms Of Service</a>
+        <span class="footer-link text-white">2025 Rocket Jr All Rights Reserved.</span>
       </div>
     </footer>
 
