--- a/index.html
+++ b/index.html
@@ -61,28 +61,24 @@
   </head>
 
   <body>
-    <header>
-      <a class="logo w-screen flex justify-center py-2" href="/"
-        ><img src="./assets/logo.svg" alt=""
-      /></a>
-      <nav class="hidden md:flex justify-center">
-        <ul>
-          <li><a href="#">Início</a></li>
-        </ul>
-        <ul>
-          <li><a href="#">Quem Somos?</a></li>
-        </ul>
-        <ul>
-          <li><a href="#services">Serviços</a></li>
-        </ul>
-        <ul>
-          <li><a href="#">Contato</a></li>
+    <header class="flex flex-col md:flex-row items-center justify-center px-4 py-2 bg-white shadow-md">
+      <a class="flex items-center justify-center md:w-1/6" href="/">
+        <img class="w-32 md:w-40" src="./assets/logo.svg" alt="Rocket Junior" />
+      </a>
+    
+      <nav class="hidden md:flex w-full md:w-2/5 justify-center items-center gap-8 border border-gray-500 rounded-2xl py-2">
+        <ul class="flex gap-6">
+          <li><a href="#" class="text-gray-700 hover:text-red-700 font-medium">Início</a></li>
+          <li><a href="#" class="text-gray-700 hover:text-red-700 font-medium">Quem Somos?</a></li>
+          <li><a href="#services" class="text-gray-700 hover:text-red-700 font-medium">Serviços</a></li>
+          <li><a href="#" class="text-gray-700 hover:text-red-700 font-medium">Contato</a></li>
         </ul>
       </nav>
-    </header>
-    <hr />
 
-    <section class="w-screen max-w-screen flex items-center justify-center relative mb-0">
+      </div>
+    </header>
+
+    <section class="w-screen flex items-center justify-center relative mb-0">
       <img src="../assets/banner.png" class="object-cover" alt="" />
       <div class="z-10 absolute text-left text-white ml-6 m-0">
         <p class="w-1/2 text-xl font-bold">Chegou a hora da inovação</p>
@@ -95,98 +91,100 @@
     </section>
 
     <div
-      class="w-screen h-20 flex items-center text-xs text-white bg-[#400000] to-red-700 p-4 justify-center"
+      class="w-screen h-20 flex items-center text-xs text-white bg-[#400000] to-red-700 p-4 justify-center "
     >
-      <img class="w-8 mr-2" src="./assets/icon.svg" alt="" />
-      <p class="w-1/3 font-bold mr-4 text-center">Melhor valor do mercado</p>
-      <img class="w-8 mr-2" src="./assets/codesandbox.svg" alt="" />
-      <p class="w-1/3 font-bold text-center">Orçamento gratuito!</p>
-      <img class="w-8 mr-2" src="./assets/User-check.svg" alt="" />
-      <p class="w-1/3 font-bold text-center">Equipe qualificada</p>
+      <div class="md:w-1/3 flex items-center justify-center">
+        <img class="w-8 mr-2" src="./assets/icon.svg" alt="" />
+        <p class="w-1/3 font-bold mr-4 text-center">Melhor valor do mercado</p>
+        <img class="w-8 mr-2" src="./assets/codesandbox.svg" alt="" />
+        <p class="w-1/3 font-bold text-center">Orçamento gratuito!</p>
+        <img class="w-8 mr-2" src="./assets/User-check.svg" alt="" />
+        <p class="w-1/3 font-bold text-center">Equipe qualificada</p>
+      </div>
     </div>
 
     <section class="w-screen flex flex-col items-center justify-center pt-4">
       <h2
-        class="border rounded-3xl py-1 pb-0 px-4 flex justify-center items-center border-red-700 mb-10"
+        class="border border-2 rounded-xl p-2 px-6 my-2 flex justify-center items-center border-red-700 font-bold text-xl"
       >
         Serviços
       </h2>
 
-      <div class="hidden md:flex">
-        <h1 class="gradient">
+      <div class="hidden md:flex items-center justify-center">
+        <h1 class="text-6xl text-center font-bold text-red-700">
           Transformamos suas ideias em <br />
           soluções digitais inovadoras.
         </h1>
       </div>
 
-      <div class="w-screen flex flex-col items-center justify-center">
+      <div class="w-screen flex flex-col md:flex-row items-center justify-center">
         <div
-          class="border rounded-3xl flex flex-col items-center justify-center p-4 m-4 gap-2"
+          class="border rounded-3xl border-gray-500 flex flex-col items-center justify-center p-4 m-4 gap-2 w-64 h-64"
         >
           <img src="./assets/Landing page.svg" class="w-12" alt="" />
           <p class="font-bold text-xl">Landing Page</p>
           <p class="text-center">
-            Desenvolvemos páginas web estratégicas para atrair visitantes e
-            convertê-los em clientes ou leads, aumentando o alcance do seu
-            negócio.
+        Desenvolvemos páginas web estratégicas para atrair visitantes e
+        convertê-los em clientes ou leads, aumentando o alcance do seu
+        negócio.
           </p>
         </div>
 
         <div
-          class="border rounded-3xl flex flex-col items-center justify-center p-4 m-4 gap-2"
+          class="border rounded-3xl border-gray-500 flex flex-col items-center justify-center p-4 m-4 gap-2 w-64 h-64"
         >
           <img src="./assets/TI.svg" class="w-12" alt="" />
           <p class="font-bold text-xl">Consultoria em TI</p>
           <p class="text-center">
-            Analisamos o setor de Tecnologia da Informação da sua empresa,
-            identificamos oportunidades de melhoria e sugerimos soluções
-            eficientes para otimizar a gestão e os processos.
+        Analisamos o setor de Tecnologia da Informação da sua empresa,
+        identificamos oportunidades de melhoria e sugerimos soluções
+        eficientes para otimizar a gestão e os processos.
           </p>
         </div>
 
         <div
-          class="border rounded-3xl flex flex-col items-center justify-center p-4 m-4 gap-2"
+          class="border rounded-3xl border-gray-500 flex flex-col items-center justify-center p-4 m-4 gap-2 w-64 h-64"
         >
           <img src="./assets/portifolio.svg" class="w-12" alt="" />
           <p class="font-bold text-xl">Portfólio Digital</p>
           <p class="text-center">
-            Criamos portfólios personalizados para profissionais e empresas,
-            reunindo seus melhores projetos e experiências para destacar sua
-            marca no mercado.
+        Criamos portfólios personalizados para profissionais e empresas,
+        reunindo seus melhores projetos e experiências para destacar sua
+        marca no mercado.
           </p>
         </div>
 
         <div
-          class="border rounded-3xl flex flex-col items-center justify-center p-4 m-4 gap-2"
+          class="border rounded-3xl border-gray-500 flex flex-col items-center justify-center p-4 m-4 gap-2 w-64 h-64"
         >
           <img class="w-12" src="./assets/sitee.svg" alt="" />
           <p class="font-bold text-xl">Desenvolvimento de Site</p>
           <p class="text-center">
-            Desenvolvemos sites personalizados, desde páginas institucionais até
-            plataformas web mais complexas, garantindo uma experiência
-            intuitiva, responsiva e eficiente
+        Desenvolvemos sites personalizados, desde páginas institucionais até
+        plataformas web mais complexas, garantindo uma experiência
+        intuitiva, responsiva e eficiente
           </p>
         </div>
 
         <div
-          class="border rounded-3xl flex flex-col items-center justify-center p-4 m-4 gap-2"
+          class="border rounded-3xl border-gray-500 flex flex-col items-center justify-center p-4 m-4 gap-2 w-64 h-64"
         >
           <img class="w-12" src="./assets/software.svg" alt="" />
           <p class="font-bold text-xl">Desenvolvimento de Sistemas</p>
           <p class="text-center">
-            Criamos soluções tecnológicas sob medida, desenvolvendo sistemas que
-            automatizam processos e otimizam a gestão da sua empresa.
+        Criamos soluções tecnológicas sob medida, desenvolvendo sistemas que
+        automatizam processos e otimizam a gestão da sua empresa.
           </p>
         </div>
       </div>
     </section>
 
-    <section class="w-screen mb-4 bg-red-800 ">
+    <section class="w-full pb-4 bg-red-800 flex flex-col items-center justify-center">
       <h2 class="text-5xl text-center py-6 text-white font-bold">
       Quem Somos?
       </h2>
 
-      <p class="w-4/5 mx-auto text-white text-justify mb-4">
+      <p class="w-4/5 md:w-2/3 lg:w-1/2 mx-auto text-white text-justify mb-6 px-4"></p>
       A Rocket Júnior (RJR) é a Empresa Júnior do curso de Sistemas de
       Informação do Campus Arapiraca – Unidade Educacional Penedo. Somos um
       time de estudantes apaixonados por tecnologia e inovação, que aplicam na
@@ -197,48 +195,47 @@
       suas carreiras!
       </p>
 
-      <div class="w-screen flex items-center justify-center p-2 gap-2 -mt-2">
+      <div class="w-screen md:w-3/5 flex items-center justify-center p-2 gap-2 -mt-2">
       <img class="w-1/2 py-2" src="./assets/Frame_2.svg" />
-      <div class="flex flex-col w-1/2 gap-2">
+      <div class="flex flex-col md:flex-row w-1/2 gap-2">
         <img class="" src="./assets/jay.svg" />
         <img class="" src="./assets/elysa.svg" />
       </div>
       </div>
 
-      <div class="retangulo bg-[#7F0000] rounded-2xl m-2 w-4.5/5 -mt2 ml-6">
+      <div class="bg-[#7F0000] rounded-2xl m-2 w-4.5/5 -2 ml-6">
         <p class="text-white text-left text-base ml-5 mr-5">
-          <b>Empresa Júnior</b> do curso bacharelado em 
-          <b>Sistemas de Informação</b>
+          <b>Empresa Júnior</b> do curso bacharelado em <b>Sistemas de Informação</b>
           </p>
       </div>
     </section>
 
-    <section class="perguntas-frequentes">
+    <section>
       <h2 class="text-5xl text-center py-6 font-bold bg-gradient-to-r from-[#7B0000] to-[#DB0303] 
       text-transparent bg-clip-text">Perguntas frequentes</h2>
-      <div class="content-box">
-        <div class="content-left">
-            <img class="content-left-img hidden md:flex mx-auto" src="./assets/logo.svg" />
+      <div>
+        <div>
+            <img class="hidden md:flex mx-auto" src="./assets/logo.svg" />
           <p class="w-4/5 mx-auto text-justify mb-4 text-[#5B5959]">
             Veja as perguntas que recebemos frequentemente sobre nossa empresa
             júnior e nossos serviços. Neste espaço, estamos respondendo apenas
             algumas delas. Caso tenha alguma dúvida específica sobre nossos
             serviços, entre em contato com nossa equipe agora mesmo!
           </p>
-            <button class="btn-contact rounded-full border-none 
+            <button class="rounded-full border-none 
             bg-gradient-to-r from-[#520101] to-[#F60707] text-white font-bold 
-            cursor-pointer w-40 h-15 mt-8 mx-auto block">
+            cursor-pointer w-40 h-15 mt-8 mx-auto block text-xl">
             Contato
           </button>
+        </div>
 
-        <div class="content-right mt-8">
-          <div class="box-ask bg-[#F0F0F0] w-4/5 rounded-2xl mx-auto">
-            <div class="box-header text-center ">
-              <span class="font-bold">001</span>
+        <div class="mt-8">
+          <div class="bg-[#F0F0F0] w-4/5 rounded-2xl mx-auto p-2">
+            <div class="text-center ">
               <h3 class="font-bold">O Que É Uma Landing Page?</h3>
               <div class="icon"></div>
             </div>
-            <div class="box-content">
+            <div class="">
               <p class="text-justify text-[#343434] ml-5 mr-5">
                 Uma Landing Page é uma página web específica criada para
                 converter visitantes em leads ou clientes. É otimizada para uma
@@ -248,13 +245,12 @@
             </div>
           </div>
 
-          <div class="box-ask bg-[#F0F0F0] mt-4 w-4/5 rounded-2xl mx-auto">
-            <div class="box-header text-center ">
-              <span class="font-bold">002</span>
-              <h3 class="font-bold">O Que É Um Portfólio?</h3>
+          <div class="bg-[#F0F0F0] mt-4 w-4/5 rounded-2xl mx-auto p-2">
+            <div class="text-center ">
+              <h3 class="font-bold">O que é um portfólio?</h3>
               <div class="icon"></div>
             </div>
-            <div class="box-content">
+            <div class="">
               <p class="text-justify text-[#343434] ml-5 mr-5">
                 Um Portfólio é uma coleção organizada de trabalhos, projetos e
                 realizações que demonstram suas habilidades, experiência e
@@ -264,13 +260,12 @@
             </div>
           </div>
 
-          <div class="box-ask bg-[#F0F0F0] mt-4 w-4/5 rounded-2xl mx-auto">
-            <div class="box-header text-center ">
-              <span class="font-bold">003</span>
-              <h3 class="font-bold">Qual A Diferença Entre Landing Page E Portfólio?</h3>
+          <div class="bg-[#F0F0F0] mt-4 w-4/5 rounded-2xl mx-auto p-2">
+            <div class="text-center">
+              <h3 class="font-bold">Qual a diferença entre landing page e portfólio?</h3>
               <div class="icon"></div>
             </div>
-            <div class="box-content">
+            <div class="">
               <p class="text-justify text-[#343434] ml-5 mr-5">
                 Enquanto uma Landing Page é focada em converter visitantes para
                 uma ação específica, um Portfólio serve para mostrar seu
@@ -280,13 +275,12 @@
             </div>
           </div>
 
-          <div class="box-ask bg-[#F0F0F0] mt-4 w-4/5 rounded-2xl mx-auto">
-            <div class="box-header text-center ">
-              <span class="font-bold">004</span>
-              <h3 class="font-bold">O Que É Consultoria Em TI?</h3>
+          <div class="bg-[#F0F0F0] mt-4 w-4/5 rounded-2xl mx-auto p-2">
+            <div class="text-center ">
+              <h3 class="font-bold">O que é consultoria em TI?</h3>
               <div class="icon"></div>
             </div>
-            <div class="box-content">
+            <div class="">
               <p class="text-justify text-[#343434] ml-5 mr-5">
                 Consultoria em TI é um serviço especializado que auxilia
                 empresas a otimizar seus processos tecnológicos, implementar
@@ -296,37 +290,35 @@
             </div>
           </div>
 
-            <div class="box-ask bg-[#F0F0F0] mt-4 w-4/5 rounded-2xl mx-auto">
-            <div class="box-header text-center ">
-              <span class="font-bold">005</span>
+            <div class="bg-[#F0F0F0] mt-4 w-4/5 rounded-2xl mx-auto p-2">
+            <div class="text-center ">
               <h3 class="font-bold text-center">Por que minha empresa precisa de um site institucional?</h3>
               <div class="icon"></div>
             </div>
-            <div class="box-content">
+            <div class="">
               <p class="text-justify text-[#343434] ml-5 mr-5">
               Um site institucional estabelece presença digital profissional,
               aumenta credibilidade, facilita o contato com clientes e serve
               como canal de informação 24/7 sobre seus produtos e serviços.
               </p>
             </div>
-            </div>
         </div>
       </div>
     </section>
 
-    <section class="timeline-section mt-8">
-      <h2 class="timeline-title text-xl text-center py-6 font-bold bg-gradient-to-r from-[#7B0000] to-[#DB0303] 
+    <section class="mt-8">
+      <h2 class="text-xl text-center py-6 font-bold bg-gradient-to-r from-[#7B0000] to-[#DB0303] 
       text-transparent bg-clip-text">Nossa Trajetória</h2>
 
-      <div class="timeline-container w-screen flex items-center justify-center p-2 gap-2 -mt-2">
-        <div class="timeline-item">
-          <div class="timeline-content">
-            <h3 class="timeline-heading">Aplicação Do Formulário PNDL 2024</h3>
-            <div class="timeline-date">Out - Nov 2024</div>
+      <div class="w-screen flex items-center justify-center p-2 gap-2 -mt-2">
+        <div class="">
+          <div class="">
+            <h3 class="">Aplicação Do Formulário PNDL 2024</h3>
+            <div class="">Out - Nov 2024</div>
           </div>
           <div class="timeline-dot red"></div>
-          <div class="timeline-content">
-            <h3 class="timeline-heading">
+          <div class="">
+            <h3 class="">
               Pesquisa e ligações para as escolas do brasil
             </h3>
             <p class="timeline-description">
@@ -336,14 +328,14 @@
           </div>
         </div>
 
-        <div class="timeline-item">
-          <div class="timeline-content">
-            <h3 class="timeline-heading">SisWeeek 2024</h3>
-            <div class="timeline-date">Out - Nov 2024</div>
+        <div class="">
+          <div class="">
+            <h3 class="">SisWeeek 2024</h3>
+            <div class="">Out - Nov 2024</div>
           </div>
           <div class="timeline-dot black"></div>
-          <div class="timeline-content">
-            <h3 class="timeline-heading">Desenvolvimento da aplicação web</h3>
+          <div class="">
+            <h3 class="">Desenvolvimento da aplicação web</h3>
             <p class="timeline-description">
               Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing Elit, Sed Do
               Eiusmod Tempor.
@@ -353,9 +345,9 @@
       </div>
     </section>
 
-    <footer class="footer bg-black">
-      <div class="footer-container w-screen flex items-center p-2 gap-2">
-        <div class="logo-section mt-6 w-1/3 ml-2">
+    <footer class="w-screen bg-black flex flex-col items-center justify-center">
+      <div class="w-screen flex flex-col items-center justify-center">
+        <div class="mt-6 w-full flex flex-col items-center justify-center">
           <img
             src="assets/logo-rocket-nameWhite.svg"
             alt="Rocket Junior"
@@ -363,20 +355,20 @@
           />
         </div>
 
-        <div class="partner-logos mt-5 gap-2 flex flex-row w-1/5 ml-15">
-          <img src="assets/LOGO FEJEA.svg" alt="FEJEA" class="partner-logo" />
+        <div class="mt-5 flex items-center justify-center w-1/2 border-t border-white pt-4">
+          <img src="assets/LOGO FEJEA.svg" alt="FEJEA" class="w-1/2" />
           <img
             src="assets/brasil-junior.svg"
             alt="Brasil Junior"
-            class="partner-logo mt-4"
+            class="w-1/2"
           />
         </div>
       </div>
 
-      <div class="footer-links max-w-screen mb-4 text-center text-[12px] text-bold">
-        <a href="/privacy" class="footer-link text-white pr-5">Privacy Policy</a>
-        <a href="/terms" class="footer-link text-white pr-5">Terms Of Service</a>
-        <span class="footer-link text-white">2025 Rocket Jr All Rights Reserved.</span>
+      <div class="w-screen flex  items-center justify-center h-12 text-center text-[12px] text-bold">
+        <a href="/privacy" class="footer-link text-white pr-5">Política de privacidade</a>
+        <a href="/terms" class="footer-link text-white pr-5">Termos de serviço</a>
+        <span class="footer-link text-white">2025 Rocket Jr. todos os direitos reservados.</span>
       </div>
     </footer>
 
