fix: ajustes de layout e centralização de textos nos serviços

--- a/index.html
+++ b/index.html
@@ -103,50 +103,50 @@
       </div>
     </div>
 
-    <section class="w-screen flex flex-col items-center justify-center pt-4">
+    <section class="w-screen flex flex-col items-center justify-center py-4">
       <h2
         class="border border-2 rounded-xl p-2 px-6 my-2 flex justify-center items-center border-red-700 font-bold text-xl"
       >
         Serviços
       </h2>
 
-      <div class="hidden md:flex items-center justify-center">
+      <div class="hidden md:flex items-center justify-center my-4">
         <h1 class="text-6xl text-center font-bold text-red-700">
           Transformamos suas ideias em <br />
           soluções digitais inovadoras.
         </h1>
       </div>
 
-      <div class="w-screen flex flex-col md:flex-row items-center justify-center">
+      <div class="w-4/5 flex flex-col md:flex-row items-center justify-center">
         <div
-          class="border rounded-3xl border-gray-500 flex flex-col items-center justify-center p-4 m-4 gap-2 w-64 h-64"
+          class="border rounded-3xl border-gray-500 flex flex-col items-center p-4 m-4 gap-2 w-1/6 h-80"
         >
           <img src="./assets/Landing page.svg" class="w-12" alt="" />
-          <p class="font-bold text-xl">Landing Page</p>
+          <p class="font-bold text-xl text-center">Landing Page</p>
           <p class="text-center">
-        Desenvolvemos páginas web estratégicas para atrair visitantes e
-        convertê-los em clientes ou leads, aumentando o alcance do seu
-        negócio.
+            Desenvolvemos páginas web estratégicas para atrair visitantes e
+            convertê-los em clientes ou leads, aumentando o alcance do seu
+            negócio.
           </p>
         </div>
 
         <div
-          class="border rounded-3xl border-gray-500 flex flex-col items-center justify-center p-4 m-4 gap-2 w-64 h-64"
+          class="border rounded-3xl border-gray-500 flex flex-col items-center p-4 m-4 gap-2 w-1/6 h-80"
         >
           <img src="./assets/TI.svg" class="w-12" alt="" />
-          <p class="font-bold text-xl">Consultoria em TI</p>
+          <p class="font-bold text-xl text-center">Consultoria em TI</p>
           <p class="text-center">
-        Analisamos o setor de Tecnologia da Informação da sua empresa,
-        identificamos oportunidades de melhoria e sugerimos soluções
-        eficientes para otimizar a gestão e os processos.
+            Analisamos o setor de Tecnologia da Informação da sua empresa,
+            identificamos oportunidades de melhoria e sugerimos soluções
+            eficientes para otimizar a gestão e os processos.
           </p>
         </div>
 
         <div
-          class="border rounded-3xl border-gray-500 flex flex-col items-center justify-center p-4 m-4 gap-2 w-64 h-64"
+          class="border rounded-3xl border-gray-500 flex flex-col items-center p-4 m-4 gap-2 w-1/6 h-80"
         >
           <img src="./assets/portifolio.svg" class="w-12" alt="" />
-          <p class="font-bold text-xl">Portfólio Digital</p>
+          <p class="font-bold text-xl text-center">Portfólio Digital</p>
           <p class="text-center">
         Criamos portfólios personalizados para profissionais e empresas,
         reunindo seus melhores projetos e experiências para destacar sua
@@ -155,10 +155,10 @@
         </div>
 
         <div
-          class="border rounded-3xl border-gray-500 flex flex-col items-center justify-center p-4 m-4 gap-2 w-64 h-64"
+          class="border rounded-3xl border-gray-500 flex flex-col items-center p-4 m-4 gap-2 w-1/6 h-80"
         >
           <img class="w-12" src="./assets/sitee.svg" alt="" />
-          <p class="font-bold text-xl">Desenvolvimento de Site</p>
+          <p class="font-bold text-xl text-center">Desenvolvimento de Site</p>
           <p class="text-center">
         Desenvolvemos sites personalizados, desde páginas institucionais até
         plataformas web mais complexas, garantindo uma experiência
@@ -167,10 +167,10 @@
         </div>
 
         <div
-          class="border rounded-3xl border-gray-500 flex flex-col items-center justify-center p-4 m-4 gap-2 w-64 h-64"
+          class="border rounded-3xl border-gray-500 flex flex-col items-center p-4 m-4 gap-2 w-1/6 h-80"
         >
           <img class="w-12" src="./assets/software.svg" alt="" />
-          <p class="font-bold text-xl">Desenvolvimento de Sistemas</p>
+          <p class="font-bold text-xl text-center">Desenvolvimento de Sistemas</p>
           <p class="text-center">
         Criamos soluções tecnológicas sob medida, desenvolvendo sistemas que
         automatizam processos e otimizam a gestão da sua empresa.
