feat: melhorias no layout e responsividade da seção de inovação e trajetória

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 
   <section class="w-screen flex items-center justify-center relative mb-0">
     <img src="../assets/banner.png" class="object-cover md:w-11/12" alt="" />
-    <div class="w-9/10 z-10 absolute text-left text-white ml-6 m-0">
-      <p class="w-1/2 text-xl font-bold">Chegou a hora da inovação</p>
-      <p class="text-sm w-4/5">
+    <div class="w-9/10 z-10 absolute text-left text-white ml-6">
+      <p class="w-1/2 text-xl md:text-5xl md:mb-6 font-bold">Chegou a hora da inovação</p>
+      <p class="text-sm md:text-2xl w-4/5 md:w-1/2 ml-6">
         A Rocket Jr está no mercado com o propósito de inovar empresas com o
         desenvolvimento de tecnologias. Deixe a Rocket te ajudar a direcionar
         seu negócio.
@@ -387,10 +387,8 @@
         text-transparent bg-clip-text mb-10">Nossa Trajetória</h2>
 
     <div class="relative">
-      <!-- Linha vertical central tracejada -->
       <div class="absolute left-1/2 transform -translate-x-1/2 h-full w-0 border-l-2 border-dashed border-black"></div>
 
-      <!-- Item 1 - Lado esquerdo -->
       <div class="mb-16 relative">
         <div class="flex flex-col md:flex-row items-center">
           <div class="md:w-1/2 md:pr-8 text-right">
@@ -401,11 +399,9 @@
             </p>
           </div>
           <div class="absolute left-1/2 transform -translate-x-1/2 flex items-center justify-center">
-            <!-- Círculo tracejado externo -->
             <div
               class="w-12 h-12 rounded-full border-2 border-[#7B0000] border-dashed flex items-center justify-center">
             </div>
-            <!-- Ponto central -->
             <div class="absolute w-6 h-6 rounded-full bg-[#7B0000] z-10 border-4 border-white"></div>
           </div>
           <div class="md:w-1/2 md:pl-8 mt-4 md:mt-0">
@@ -413,16 +409,13 @@
         </div>
       </div>
 
-      <!-- Item 2 - Lado direito -->
       <div class="mb-16 relative">
         <div class="flex flex-col md:flex-row items-center">
           <div class="md:w-1/2 md:pr-8"></div>
           <div class="absolute left-1/2 transform -translate-x-1/2 flex items-center justify-center">
-            <!-- Círculo tracejado externo -->
             <div
               class="w-12 h-12 rounded-full border-2 border-[#333333] border-dashed flex items-center justify-center">
             </div>
-            <!-- Ponto central -->
             <div class="absolute w-6 h-6 rounded-full bg-[#333333] z-10 border-4 border-white"></div>
           </div>
           <div class="md:w-1/2 md:pl-8 text-left">
@@ -435,8 +428,6 @@
           </div>
         </div>
       </div>
-
-      <!-- Item 3 - Lado esquerdo -->
       <div class="mb-16 relative">
         <div class="flex flex-col md:flex-row items-center">
           <div class="md:w-1/2 md:pr-8 text-right">
@@ -448,11 +439,9 @@
             </p>
           </div>
           <div class="absolute left-1/2 transform -translate-x-1/2 flex items-center justify-center">
-            <!-- Círculo tracejado externo -->
             <div
               class="w-12 h-12 rounded-full border-2 border-[#7B0000] border-dashed flex items-center justify-center">
             </div>
-            <!-- Ponto central -->
             <div class="absolute w-6 h-6 rounded-full bg-[#7B0000] z-10 border-4 border-white"></div>
           </div>
           <div class="md:w-1/2 md:pl-8 mt-4 md:mt-0">
@@ -460,16 +449,13 @@
         </div>
       </div>
 
-      <!-- Item 4 - Lado direito -->
       <div class="relative">
         <div class="flex flex-col md:flex-row items-center">
           <div class="md:w-1/2 md:pr-8"></div>
           <div class="absolute left-1/2 transform -translate-x-1/2 flex items-center justify-center">
-            <!-- Círculo tracejado externo -->
             <div
               class="w-12 h-12 rounded-full border-2 border-[#333333] border-dashed flex items-center justify-center">
             </div>
-            <!-- Ponto central -->
             <div class="absolute w-6 h-6 rounded-full bg-[#333333] z-10 border-4 border-white"></div>
           </div>
           <div class="md:w-1/2 md:pl-8 text-left">
@@ -487,16 +473,16 @@
   <footer class="w-screen bg-black flex flex-col items-center justify-center">
     <div class="w-screen flex flex-col items-center justify-center">
       <div class="mt-6 w-full flex flex-col items-center justify-center">
-        <img src="assets/logo-rocket-nameWhite.svg" alt="Rocket Junior" class="rocket-logo" />
+        <img src="assets/logo-rocket-nameWhite.svg" alt="Rocket Junior" class="" />
       </div>
 
-      <div class="mt-5 flex items-center justify-center w-1/2 border-t border-white pt-4">
-        <img src="assets/LOGO FEJEA.svg" alt="FEJEA" class="w-1/2" />
-        <img src="assets/brasil-junior.svg" alt="Brasil Junior" class="w-1/2" />
+      <div class="mt-5 flex items-center justify-center w-1/2 border-t border-white pt-4 gap-6">
+        <img src="assets/LOGO FEJEA.svg" alt="FEJEA" class="w-1/2 md:w-2/10" />
+        <img src="assets/brasil-junior.svg" alt="Brasil Junior" class="w-1/2 md:w-2/10" />
       </div>
     </div>
 
-    <div class="w-screen flex  items-center justify-center h-12 text-center text-[12px] text-bold">
+    <div class="w-screen flex  items-center justify-center h-12 text-center text-bold">
       <a href="/privacy" class="footer-link text-white pr-5">Política de privacidade</a>
       <a href="/terms" class="footer-link text-white pr-5">Termos de serviço</a>
       <span class="footer-link text-white">2025 Rocket Jr. todos os direitos reservados.</span>
